Fix spacing issues

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   padding: 0 5vw;
   font-family: "Gothic A1", sans-serif;
-  overflow-x: hidden;
 }
 
 h1,
@@ -10,6 +9,7 @@ h2,
 h3,
 h4,
 h5 {
+  font-family: Helvetica, Arial, freesans, sans-serif;
   margin: 0;
 }
 
@@ -34,7 +34,7 @@ h4 {
 
 footer {
   /* height: 60px; */
-  width: 100vw;
+  width: 95vw;
   margin-left: -5vw;
   padding-left: 5vw;
   background: #4c4c4c;
@@ -52,17 +52,19 @@ footer {
   grid-template-rows: 300px auto;
   grid-gap: 16px;
   z-index: -2;
+  margin-bottom: 8px;
 }
 
 .post {
-  /* border-radius: 5px; */
+  /* CAREFUL */
+  min-height: 275px;
   height: auto;
   overflow: hidden;
   box-sizing: initial;
 }
 
 .post-borders {
-  border: 1px dashed black;
+  border: 5px dashed black;
 }
 
 .story {
@@ -70,12 +72,19 @@ footer {
 }
 
 .story-image {
+  /* CAREFUL */
+  min-width: 50px;
+  min-height: 145px;
   width: 100%;
   height: 50%;
   background: #e5e5e5;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+}
+
+.secondary-story-title {
+  margin-top: 8px;
 }
 
 .img1 {
@@ -130,10 +139,40 @@ footer {
   font-size: 0.75em;
 }
 
+.block1 {
+  border-color: yellow;
+}
+
 .block2 {
+  min-width: 480px;
   background-image: url(https://css-tricks.com/wp-content/uploads/2018/12/guide-flexbox.png);
   background-size: cover;
+  border-color: aqua;
   /* height: 300px; */
+}
+
+.block3 {
+  border-color: pink;
+}
+
+.block4 {
+  border-color: orange;
+}
+
+.block5 {
+  border-color: purple;
+}
+
+.block6 {
+  border-color: green;
+}
+
+.block7 {
+  border-color: red;
+}
+
+.block8 {
+  border-color: black;
 }
 
 .title {
@@ -141,7 +180,7 @@ footer {
   padding-left: 5vw;
   padding-top: 16px;
   padding-bottom: 16px;
-  width: 100vw;
+  width: 95vw;
   min-height: 56px;
   background: #bc312a;
   color: #ffffff;
@@ -201,7 +240,7 @@ nav {
 
 .grid-control-wrapper {
   position: fixed;
-  top: calc(100vh - 50px);
+  top: calc(100vh - 70px);
   right: 50px;
   color: #ffffff;
   background-color: #000000;
